--- a/src/assets/styles/components/_slider.scss
+++ b/src/assets/styles/components/_slider.scss
@@ -40,17 +40,19 @@
         align-items: center;
 
         &-top {
+            width: 100%;
             display: flex;
             align-items: center;
             height: 70px;
         }
         &-number {
-            font-size: $double-gap + 2px;
-            color: $accent;
-            margin-right: 7px;
             display: flex;
+            text-align: start;
             align-items: center;
             justify-content: center;
+            margin-right: 7px;
+            font-size: $double-gap + 2px;
+            color: $accent;
         }
         &-text {
             font-size: 19px;
